--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,22 @@ nav a.active {
   align-items: center;
   gap: 15px;
 }
+
+.user-list{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 15px;
+  margin: 20px 0xp;
+}
+
+.user-list img{
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.container{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
