--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,18 @@ nav a.active {
   color: white;
 }
 
+.theme-dark h3 {
+  color: black;
+}
+
+.theme-dark h1{
+  color: white;
+}
+
+.theme-dark p{
+  color: black;
+}
+
 .theme-dark header {
   background-color: #1f1f1f;
 }
@@ -76,10 +88,6 @@ nav a.active {
 
 .container h1 {
   text-align: center;
-  font-size: 32px;
-  font-weight: 600;
-  color: #333;
-  margin-bottom: 25px;
 }
 
 
